--- a/metal-v2.15.0-non-keyed/index.html
+++ b/metal-v2.15.0-non-keyed/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <title>Metal.js v2.14.0</title>
-  <link href="../css/currentStyle.css" rel="stylesheet"/>
+    <meta charset="utf-8" />
+    <title>Metal.js non-keyed</title>
+    <link href="../css/currentStyle.css" rel="stylesheet" />
 </head>
+
 <body>
-  <div id='main'></div>
-  <script src='dist/main.js'></script>
+    <div id='main'></div>
+    <script src='dist/main.js'></script>
 </body>
+
 </html>
